--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "angular-touch": "~1.2.0",
     "angular-route": "~1.2.0",
     "angular-ui-sortable": "~0.12.10",
-    "angular-local-storage": "~0.0.7"
+    "angular-local-storage": "~0.0.7",
+    "ng-simplePagination": "~1.0.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
